--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
               <span style="color: palevioletred;">81% off</span>
         </div>
         <div class="slide">
-          <a><img src="images/Women's/Saree.jpg" style="width: 150px; height: 150px;" alt="..." ></a><br>
+          <a><img src="images/Women's/saree.jpg" style="width: 150px; height: 150px;" alt="..." ></a><br>
               SVB Saree Dark Blue..<br>
               <label style="font-size: large; color: black; font-weight: bold;">₹439</label>
               <span class="text-decoration-line-through">₹1599</span>
